fix: remove alternative fonts and fix geometry gaps

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,16 +1,58 @@
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
 body {
   width: 1100px;
   margin: 0 auto;
-  font-family: 'Raleway', sans-serif;
-  color: #000;
+  font-family: 'Raleway';
   background-color: #fff;
+  color: #000;
+  -webkit-font-smoothing: antialiased;
 }
 
-/* Шрифты для всех текстовых элементов */
-.address, .header__menu-link, .card__title, .card__text, .about__title, .about__text, .bet-button {
-  font-family: 'Raleway', sans-serif;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+ul,
+ol,
+li {
+  margin: 0;
+  padding: 0;
 }
 
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+
+/* DOTS IN MENU (CSS only) */
+.header__menu-list,
+.footer__menu-list {
+  display: flex;
+  list-style: none;
+  align-items: center;
+}
+
+.header__menu-item:not(:last-child)::after,
+.footer__menu-list li:not(:last-child)::after {
+  content: '•';
+  margin: 0 8px;
+}
+
+/* HEADER */
 .header {
   display: grid;
   grid-template-columns: 1fr min-content 1fr;
@@ -18,30 +60,15 @@ body {
   padding: 92px 50px;
 }
 
-.header__menu-list {
-  display: flex;
-  gap: 32px;
-}
-
-.header__menu-item {
-  position: relative;
-}
-
-.header__menu-item:not(:last-child)::after {
-  content: "•";
-  position: absolute;
-  right: -20px;
-}
-
 .header__logo-image {
   width: 148px;
 }
 
 .header__address {
-  justify-self: end;
   font-style: normal;
   font-size: 18px;
-  line-height: 1.2;
+  line-height: 1.4;
+  justify-self: end;
 }
 
 /* COVER */
@@ -59,15 +86,12 @@ body {
 
 .overlay {
   position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
+  inset: 0;
   background-color: rgba(0, 0, 0, 0.6);
+  z-index: 0;
 }
 
 .cover__title {
-  position: relative;
   display: flex;
   flex-direction: column;
   gap: 20px;
@@ -75,48 +99,46 @@ body {
   font-size: 100px;
   font-weight: 700;
   line-height: 1;
+  z-index: 1;
   text-transform: uppercase;
 }
 
 .aligned-text {
+  display: block;
   letter-spacing: 0.3em;
 }
 
 .aligned-text_center {
   text-align: center;
-  letter-spacing: 0.3em;
 }
 
 .aligned-text_right {
   text-align: right;
-  letter-spacing: 0.3em;
-}
-
-/* Сброс letter-spacing для последней буквы, чтобы не косило выравнивание */
-.letter-spacing-none {
-  letter-spacing: 0;
 }
 
 .cover__description {
-  position: relative;
   display: flex;
   align-items: center;
-  justify-content: flex-end;
+  justify-content: center;
   gap: 78px;
+  z-index: 1;
+  color: #fff;
 }
 
 .cover__description-text {
-  color: #fff;
   font-size: 22px;
   text-transform: uppercase;
   word-spacing: 18px;
 }
 
 .bet-button {
+  background-color: transparent;
   border: 1px solid #fff;
   color: #fff;
   padding: 12px 31px;
+  font-family: inherit;
   font-size: 22px;
+  cursor: pointer;
   text-transform: uppercase;
 }
 
@@ -127,13 +149,16 @@ body {
 
 .lots__heading {
   font-size: 40px;
+  text-transform: uppercase;
   margin-bottom: 27px;
   padding-left: 65px;
 }
 
 .lots__card-list {
   display: flex;
+  justify-content: space-between;
   gap: 25px;
+  list-style: none;
 }
 
 .lots__card-list-item {
@@ -143,26 +168,34 @@ body {
 
 .card {
   position: relative;
-  height: 100%;
-  padding: 50px 40px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  height: 100%;
+  padding: 50px 40px;
   background-size: cover;
   background-position: center;
   color: #fff;
 }
 
-.card_type_film { background-image: url(../images/card-lot-01.jpg); }
-.card_type_book { background-image: url(../images/card-lot-02.jpg); }
-.card_type_picture { background-image: url(../images/card-lot-03.jpg); }
+.card_type_film {
+  background-image: url(../images/card-lot-01.jpg);
+}
+
+.card_type_book {
+  background-image: url(../images/card-lot-02.jpg);
+}
+
+.card_type_picture {
+  background-image: url(../images/card-lot-03.jpg);
+}
 
 .card__title {
   font-size: 22px;
-  font-weight: 700;
   text-decoration: underline;
   text-transform: uppercase;
   z-index: 1;
+  line-height: 1.2;
 }
 
 .card__text {
@@ -172,11 +205,11 @@ body {
 }
 
 .lots__look-more-link {
-  display: block;
+  display: inline-block;
   margin-top: 30px;
-  padding-left: 65px;
   font-size: 20px;
   text-decoration: underline;
+  padding-left: 65px;
 }
 
 /* ABOUT */
@@ -187,20 +220,15 @@ body {
   gap: 30px;
 }
 
-.about__column_type_logo {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
 .about__logo {
+  background-color: #000;
   width: 240px;
   height: 240px;
-  background-color: #000;
   border-radius: 50%;
   display: flex;
   justify-content: center;
   align-items: center;
+  margin: 0 auto;
 }
 
 .about__logo-image {
@@ -209,6 +237,7 @@ body {
 
 .about__title {
   font-size: 40px;
+  text-transform: uppercase;
   margin: 100px 0 40px;
 }
 
@@ -226,23 +255,33 @@ body {
   padding: 180px 50px 90px;
 }
 
-.footer__menu-list {
-  display: flex;
-  gap: 32px;
+.footer__address {
+  justify-self: start;
 }
 
 .footer__social-list {
   display: flex;
   gap: 16px;
-  justify-self: end;
+  justify-content: flex-end;
+  list-style: none;
 }
 
 .footer__social-link {
   display: flex;
+  align-items: center;
+  justify-content: center;
   width: 48px;
   height: 48px;
   border: 1px solid #000;
   border-radius: 50%;
-  justify-content: center;
-  align-items: center;
+}
+
+.footer__social-icon {
+  width: 24px;
+  height: 24px;
+}
+
+.header__menu-link_active,
+.footer__menu-link_active {
+  text-decoration: none;
 }
